# nix-templates

./: flake.nix
bash/: flake.nix
bash/nix/: devshell.nix  module.nix  package.nix
bash/nix/test/: module-test.nix
bash/src/: hello.sh
c/cLib/: .gitignore  CMakeLists.txt  flake.nix
c/cLib/cmake/: cLibConfig.cmake.in
c/cLib/nix/: devshell.nix  module.nix  package.nix
c/cLib/nix/test/: module-test.nix
c/cLib/src/: CMakeLists.txt
rust/: flake.nix
